# beneissue

./: .gitignore  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  action.yml  langgraph.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
action/: action.yml  example-workflow.yml
docs/: DASHBOARD_CONTEXT.md  DASHBOARD_PLAN.md  langgraph-features.md  langsmith-features.md
docs/images/: workflow.mmd
examples/calculator/: README.md
examples/calculator/.github/workflows/: beneissue-workflow.yml
schemas/: test-case.json
scripts/: generate-licenses.sh  langsmith_cost_debug.py  langsmith_eval.py  langsmith_prompt.py
scripts/sql/: 001_create_tables.sql  002_add_cost_columns.sql  002_daily_metrics_trigger.sql
src/beneissue/: cli.py  config.py  observability.py
src/beneissue/graph/: routing.py  state.py  workflow.py
src/beneissue/integrations/: claude_code.py  git.py  github.py
src/beneissue/metrics/: collector.py  schemas.py  storage.py
src/beneissue/nodes/: actions.py  analyze.py  fix.py  intake.py  schemas.py  triage.py
src/beneissue/prompts/: analyze.md  fix.md  triage.md
src/beneissue/templates/: SKILL.md  beneissue-config.yml  skill-config.yml
template/: README.md
template/src/: __init__.py  add.py  divide.py  main.py  multiply.py  subtract.py
tests/: __init__.py  conftest.py  test_ai_integration.py  test_config.py  test_langsmith_cost_tracking.py  test_load_preset.py  test_metrics.py  test_routing.py  test_schemas.py
tests/fixtures/: existing_issues.json
tests/fixtures/mock-codebase/: README.md
tests/snapshots/: triage_duplicate_table_extraction.json  triage_invalid_spam.json  triage_invalid_unrelated.json
(+35 files in other folders)
