[project]
name = "beneissue"
version = "0.1.0"
description = "AI-powered GitHub issue automation framework"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Benedict Lee", email = "leebd@hancom.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "langchain-anthropic>=0.2.0",
    "PyGithub>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.scripts]
beneissue = "beneissue.cli:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
